.archive/apps/openclaw/homeops-claw/route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app homeops-claw
  namespace: openclaw
  annotations:
    external-dns.alpha.kubernetes.io/target: "internal.${SECRET_DOMAIN}"
    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == 200"]
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Openclaw
    gethomepage.dev/name: *app
    gethomepage.dev/description: "GitOps Repo AI Agent"
    gethomepage.dev/pod-selector: app.kubernetes.io/name=homeops-claw
spec:
  hostnames:
    - "homeops-claw.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: homeops-claw
          port: 18789
